// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Account {
  id                String  @id @default(cuid())
  userId            String
  type              String
  provider          String
  providerAccountId String
  refresh_token     String? @db.Text
  access_token      String? @db.Text
  expires_at        Int?
  token_type        String?
  scope             String?
  id_token          String? @db.Text
  session_state     String?

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
}

model Session {
  id           String   @id @default(cuid())
  sessionToken String   @unique
  userId       String
  expires      DateTime
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model User {
  id            String         @id @default(cuid())
  name          String?        @unique
  email         String?        @unique
  emailVerified DateTime?
  image         String?
  role          String         @default("user")
  played        Int            @default(0)
  wins          Int            @default(0)
  credits       Int            @default(0)
  rank          String         @default("bronze")
  accounts      Account[]
  sessions      Session[]
  announcements Announcement[]
}

model VerificationToken {
  identifier String
  token      String   @unique
  expires    DateTime

  @@unique([identifier, token])
}

model Announcement {
  id        String   @id @default(cuid())
  title     String
  content   String
  userId    String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model Game {
  id           String   @id @default(cuid())
  name         String
  players      Json
  setupData    Json
  gameover     Json
  nextRoomID   String?
  unlisted     Boolean?
  state        Json?
  initialState Json?
  log          Json?
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt
}
