//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Account {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table Session {
  id String [pk]
  sessionToken String [unique, not null]
  userId String [not null]
  expires DateTime [not null]
  user User [not null]
}

Table User {
  id String [pk]
  name String [unique]
  email String [unique]
  emailVerified DateTime
  image String
  role String [not null, default: 'user']
  played Int [not null, default: 0]
  wins Int [not null, default: 0]
  credits Int [not null, default: 0]
  rank String [not null, default: 'bronze']
  accounts Account [not null]
  sessions Session [not null]
  announcements Announcement [not null]
}

Table VerificationToken {
  identifier String [not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Table Announcement {
  id String [pk]
  title String [not null]
  content String [not null]
  userId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
}

Table Game {
  id String [pk]
  name String [not null]
  players Json [not null]
  setupData Json [not null]
  gameover Json [not null]
  nextRoomID String
  unlisted Boolean
  state Json
  initialState Json
  log Json
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Ref: Account.userId > User.id [delete: Cascade]

Ref: Session.userId > User.id [delete: Cascade]

Ref: Announcement.userId > User.id [delete: Cascade]